Zugriff auf TestKomponente funktioniert

--- a/client/src/app/detailseite/detailseite.component.html
+++ b/client/src/app/detailseite/detailseite.component.html
@@ -1,3 +1,43 @@
-<p>
-  detailseite works!
-</p>
+
+    <header>
+        <div id="topbar">
+            <a id="download" href="#">Download</a>
+        </div>
+        <div id="container1">
+            <div id="profilbild"></div>
+            <div id="titel">Titel der Abschlussarbeit</div>
+            <div id="name">Student xyz</div>
+            <div id="timer"></div>
+        </div>
+    </header>
+
+    <div id="navbar">
+        <div id="box1">
+            <div id="link1">
+                <i class="fas fa-search"></i>
+            </div>
+           <div id="link2">
+               <i class="fas fa-plus-circle"></i>
+            </div>
+            <div id="link3">
+                <i class="fas fa-edit"></i>
+            </div>
+            <div id="link4">
+                <i class="fas fa-user"></i>
+            </div>
+            <div id="link5">
+                <i class="fas fa-sign-out-alt"></i>
+            </div>
+        </div>
+    </div>
+
+    <main>
+
+        <section id="container2">
+            <div id="beschreibung">Beschreibung</div>
+            <div id="gliederung">Gliederung</div>
+            <div id="autor">Autor</div>
+            <div id="betreuer">Betreuer</div>
+        </section>
+
+    </main>
