--- a/client/src/app/test/test.component.html
+++ b/client/src/app/test/test.component.html
@@ -38,8 +38,8 @@
 <h1></h1>
 
 <div *ngIf="branche">
-  <h2>{{branche.bezeichnung | uppercase}} Details</h2>
-  <div><span>id: </span>{{branche.id}}</div>
+  <h2>{{branche.Bezeichnung | uppercase}} Details</h2>
+  <div><span>id: </span>{{branche.BranchenID}}</div>
   <div>
     <label>name:
       <input  placeholder="name"/>
