Oberflächen Deesign hinzugefügt

--- a/client/src/app/app-header/app-header.component.html
+++ b/client/src/app/app-header/app-header.component.html
@@ -1,3 +1,6 @@
-<p>
-  app-header works!
-</p>
+<header>
+    <div id="topbar">
+        <a id="download" href="#">{{titel}}</a>
+    </div>
+
+</header>
