--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,3 +1,13 @@
-<p>
-  login works!
-</p>
+<section id="container3">
+  <div id="login">
+    <br>
+    <form action="#">
+      <div id="txt">
+        <div id="name">Bitte geben Sie Ihre Anmeldedaten ein.</div> <br>
+        <div>Benutzername  </div> <div> <input type="text" name="name"> </div> <br>
+        <div>Passwort  </div><div> <input type="text" name="passwort"> </div>
+        <input type="submit" value="Anmelden">
+      </div>
+    </form>
+  </div>
+</section>
