--- a/client/src/app/app-nav/app-nav.component.html
+++ b/client/src/app/app-nav/app-nav.component.html
@@ -1,3 +1,19 @@
-<p>
-  app-nav works!
-</p>
+<div id="navbar">
+    <div id="box1">
+        <div id="link1">
+            <i class="fas fa-search">Suche</i>
+        </div>
+       <div id="link2">
+           <i class="fas fa-plus-circle">Eintrag</i>
+        </div>
+        <div id="link3">
+            <i class="fas fa-edit">test3</i>
+        </div>
+        <div id="link4">
+            <i class="fas fa-user">test4</i>
+        </div>
+        <div id="link5">
+            <i class="fas fa-sign-out-alt">test5</i>
+        </div>
+    </div>
+</div>
