--- a/client/src/app/app-header/app-header.component.html
+++ b/client/src/app/app-header/app-header.component.html
@@ -1,6 +1,6 @@
+
 <header>
     <div id="topbar">
-        <a id="download" href="#">{{titel}}</a>
+        <p id="download">Abschlussarbeitsverwaltung der Fachhochschule Wedel</p>
     </div>
-
 </header>
