--- a/client/src/app/app-nav/app-nav.component.html
+++ b/client/src/app/app-nav/app-nav.component.html
@@ -1,19 +1,24 @@
 <div id="navbar">
     <div id="box1">
+      <div id="link5">
+          <img src="logo.jpg" alt="Logo">
+      </div>
         <div id="link1">
-            <i class="fas fa-search">Suche</i>
+            <i class="fas fa-search"></i>
+            <p> Suche </p>
         </div>
        <div id="link2">
-           <i class="fas fa-plus-circle">Eintrag</i>
+           <i class="fas fa-plus-circle"></i>
+             <p> Eintrag </p>
         </div>
         <div id="link3">
-            <i class="fas fa-edit">test3</i>
+            <i class="fas fa-edit"></i>
+              <p> Ändern </p>
         </div>
+
         <div id="link4">
-            <i class="fas fa-user">test4</i>
-        </div>
-        <div id="link5">
-            <i class="fas fa-sign-out-alt">test5</i>
+            <i class="fas fa-sign-out-alt"></i>
+              <p> Logout </p>
         </div>
     </div>
 </div>
