--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<app-app-header></app-app-header>
+<div class="main-wrapper">
+<app-app-nav></app-app-nav>
+<div class="main">
+  <router-outlet></router-outlet>
+</div>
+</div>
+<app-app-footer></app-app-footer>
