--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,13 +1,15 @@
 <section id="container3">
+    <form (submit)="loginUser($event)" >
   <div id="login">
     <br>
     <form action="#">
       <div id="txt">
         <div id="name">Bitte geben Sie Ihre Anmeldedaten ein.</div> <br>
-        <div>Benutzername  </div> <div> <input type="text" name="name"> </div> <br>
-        <div>Passwort  </div><div> <input type="text" name="passwort"> </div>
-        <input type="submit" value="Anmelden">
+        <div>Benutzername  </div> <div> <input type="text" autocomplete="off" placeholder="Username" id="username" name ="name"> </div> <br>
+        <div>Passwort  </div><div>      <input type="password" autocomplete="off" placeholder="Password" id="password" name="passwort"> </div>
+        <button type="submit" id="submit">Anmelden </button>
       </div>
     </form>
   </div>
+  </form>
 </section>
