--- a/client/src/app/app-nav/app-nav.component.html
+++ b/client/src/app/app-nav/app-nav.component.html
@@ -9,11 +9,11 @@
         </div>
        <div id="link2" [routerLink]="['/erstellseite']">
            <i class="fas fa-plus-circle"  ></i>
-             <p> Eintrag </p>
+             <p> Abschlussarbeit </p>
         </div>
-        <div id="link3" [routerLink]="['/admin']">
-            <i class="fas fa-edit" ></i>
-              <p> Ändern </p>
+        <div id="link3" [routerLink]="['/personerstellseite']">
+            <i class="fas fa-plus-circle" ></i>
+              <p> Person</p>
         </div>
 
         <div id="link4" [routerLink]="['/logout']">
